--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
-ROM_URL=
-ZIP_NAME=
-OS_TYPE=
-BUILD_TYPE=
-REPACK_NAME=
-VERSION=
+ROM_URL= https://bigota.d.miui.com/22.1.13/miui_ARESPRE_22.1.13_fe225402ca_12.0.zip
+ZIP_NAME= miui_ARESPRE_22.1.13_fe225402ca_12.0.zip
+OS_TYPE= miui
+BUILD_TYPE= ab
+REPACK_NAME= sgsi.zip
+VERSION= 12
